# ndb_ufes_training_pipeline

./: .dvcignore  .gitignore  CITATION.cff  NOTICE  README.md  data.dvc  main.py  params.yaml  pyproject.toml  requirements.txt  run_dvc.sh  run_experiments.sh  train.sh
.dvc/: config
mlruns/0/: meta.yaml
notebooks/: cifar_test.ipynb  test.ipynb
scripts/: README.md  check_models_mps.py  check_mps.py  run_mps_validation.command  run_pndb_ufes_batch.py  run_pndb_ufes_queue.sh  start_pndb_ufes_queue.sh  stop_pndb_ufes_queue.sh
scripts/exploratory/: run_three_batch_legacy.sh
src/: __init__.py  early_stopper.py  logger.py
src/dataset/: __init__.py  leakage_safe_organizer.py  ndb_ufes_dataset.py  ndb_ufes_organizer.py
src/loss/: loss_selector.py
src/models/: densenet121.py  efficientnetb4.py  mobilenet.py  model_selector.py  resnet50.py  vgg16.py
src/optimizer/: optimizer_scheduler_selector.py
src/pipeline/: metrics.py  pipeline.py
src/pipeline/job/: __init__.py  job.py  test.py  train.py
src/utils/: dictionary.py
src/validate_input/: params.py
tests/: test_leakage_safe_organizer.py  test_ndb_ufes_dataset.py
